--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -50,4 +50,11 @@
     <dimen name="fragment_location_list_drawable_padding">5dp</dimen>
 
 
+    <!--PREFERENCES-->
+    <dimen name="preference_item_height">75dp</dimen>
+    <dimen name="preference_text_size">14sp</dimen>
+
+    <dimen name="preference_text_size_title">18sp</dimen>
+
+
 </resources>
