--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -55,6 +55,7 @@
     <dimen name="preference_text_size">14sp</dimen>
 
     <dimen name="preference_text_size_title">18sp</dimen>
+    <dimen name="list_dialog_title_height">60dp</dimen>
 
 
 </resources>
