--- a/app/src/main/res/layout/fragment_location_list.xml
+++ b/app/src/main/res/layout/fragment_location_list.xml
@@ -9,11 +9,7 @@
     <ListView
         android:id="@android:id/list"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/white"
-        android:listSelector="@android:color/transparent"
-        android:divider="@drawable/inset_divider_default_list"/>
+       style="@style/WeatherApp.ListView"/>
 
 
     <ProgressBar
