--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,9 +53,11 @@
     <!--PREFERENCES-->
     <dimen name="preference_item_height">75dp</dimen>
     <dimen name="preference_text_size">14sp</dimen>
-
     <dimen name="preference_text_size_title">18sp</dimen>
+
+    <!--LIST DIALOG-->
     <dimen name="list_dialog_title_height">60dp</dimen>
+    <dimen name="list_dialog_title">18sp</dimen>
 
 
 </resources>
