SimpleListDialogAdapter deleted attributes move to styles.xml

--- a/app/src/main/res/layout/fragment_forecast_list.xml
+++ b/app/src/main/res/layout/fragment_forecast_list.xml
@@ -13,10 +13,8 @@
 
 
     <ProgressBar
-        android:id="@android:id/empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        style="@style/WeatherApp.EmptyProgressBar"
+       />
 
 
 
