--- a/app/src/main/res/layout/fragment_location_list.xml
+++ b/app/src/main/res/layout/fragment_location_list.xml
@@ -8,15 +8,11 @@
 
     <ListView
         android:id="@android:id/list"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-       style="@style/WeatherApp.ListView"/>
+        style="@style/WeatherApp.ListView"/>
 
 
     <ProgressBar
-        android:id="@android:id/empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        style="@style/WeatherApp.EmptyProgressBar"/>
 
     <ImageView
         android:layout_width="match_parent"
