--- a/app/src/main/res/values/settings.xml
+++ b/app/src/main/res/values/settings.xml
@@ -12,4 +12,6 @@
     <string name="url_multiple_weather_by_id">/group?id=%1$s</string>
     <string name="url_forecast_by_location">/forecast/daily?lat=%1$f&amp;lon=%2$f&amp;cnt=7</string>
 
+    <string name="crittercism">51680e575483080612000014</string>
+
 </resources>
